--- a/WebContent/Man_fashion.xhtml
+++ b/WebContent/Man_fashion.xhtml
@@ -9,84 +9,65 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
-	
- <ui:composition template="/templates/common_template.xhtml">
-	<ui:define name="pageTitle">Ferfi_divat</ui:define>
+
+<ui:composition template="/templates/common_template.xhtml">
+	<ui:define name="pageTitle">Man fasion</ui:define>
 	<ui:define name="pageHeader">Webshop products</ui:define>
 	<ui:define name="page_content">
-	<div class="col-md-9">
-          <div class="row carousel-holder">
-            <div class="col-md-12">
-              <div id="carousel-example-generic" class="carousel slide">
-                <ol class="carousel-indicators">
-                  <li class="active"></li>
-                  <li></li>
-                  <li></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img class="slide-image" src="http://placehold.it/800x300"
-                    alt="" />
-                  </div>
-                  <div class="item">
-                    <img class="slide-image" src="http://placehold.it/800x300"
-                    alt="" />
-                  </div>
-                  <div class="item">
-                    <img class="slide-image" src="http://placehold.it/800x300"
-                    alt="" />
-                  </div>
-                </div>
-                <a class="left carousel-control"
-                href="#carousel-example-generic"> <span
-                class="glyphicon glyphicon-chevron-left"></span> </a>
-                <a class="right carousel-control"
-                href="#carousel-example-generic"> <span
-                class="glyphicon glyphicon-chevron-right"></span> </a>
-              </div>
-            </div>
-          </div>
-          
-         
-          <div class="row">
-            <ui:repeat value="#{productController.productsByCategory('Man Fashion')}" var="product">
-            <div class="col-sm-4 col-lg-4 col-md-4">
-              <div class="thumbnail">
-                <img src="http://placehold.it/320x150" alt="" />
-                <div class="caption">
-                  <h4 class="pull-right">
-                   11111111111111111
-                  </h4>
-                  <h4>
-                  <h:form>
-                  <h:commandLink action="shop_item.xhtml" value="#{product.productName}">
-                  	<f:setPropertyActionListener target="#{productController.showProduct}" value="#{product}"/>
-                  </h:commandLink>       
-                 </h:form>
-                  </h4>
-                  <p>
-                    This is a short description. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.
-                  </p>
-                </div>
-                <div class="ratings">
-                  <p class="pull-right">
-                    12 reviews
-                  </p>
-                  <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                  </p>
-                </div>
-              </div>
-            </div>
-            </ui:repeat>
-          </div>
-        </div>
-	
+		<div class="col-md-9">
+			
+
+			<div class="row">
+				<ui:repeat
+					value="#{productController.productsByCategory('Man Fashion')}"
+					var="product">
+					<div class="col-sm-4 col-lg-4 col-md-4">
+						<div class="thumbnail">
+							<img src="http://placehold.it/320x150" alt="" />
+							<div class="caption">
+								<h4 class="pull-right">
+									$
+									<h:outputText value="#{product.price}" />
+								</h4>
+								<h4>
+									<h:form>
+										<h:commandLink action="shop_item.xhtml"
+											value="#{product.productName}">
+											<f:setPropertyActionListener
+												target="#{productController.showProduct}" value="#{product}" />
+										</h:commandLink>
+									</h:form>
+								</h4>
+								<p>
+									<h:outputText value="#{product.description}" />
+								</p>
+							</div>
+							<div class="ratings">
+								<p class="pull-right">12 reviews</p>
+								<p>
+									<span class="glyphicon glyphicon-star"></span> <span
+										class="glyphicon glyphicon-star"></span> <span
+										class="glyphicon glyphicon-star"></span> <span
+										class="glyphicon glyphicon-star"></span> <span
+										class="glyphicon glyphicon-star-empty"></span>
+								</p>
+							</div>
+							<h:form>
+								<h:commandLink action="#{basketController.putInBasket()}"
+									value="put in Basket!">
+									<f:setPropertyActionListener
+										target="#{basketController.clientName}"
+										value="#{securityBean.userName}" />
+									<f:setPropertyActionListener
+										target="#{basketController.productId}" value="#{product.id}" />
+								</h:commandLink>
+							</h:form>
+						</div>
+					</div>
+				</ui:repeat>
+			</div>
+		</div>
+
 	</ui:define>
 </ui:composition>
 </html>
