--- a/WebContent/basket.xhtml
+++ b/WebContent/basket.xhtml
@@ -9,23 +9,71 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
-	
- <ui:composition template="/templates/common_template.xhtml">
+
+<ui:composition template="/templates/common_template.xhtml">
 	<ui:define name="pageTitle">Webshop</ui:define>
 	<ui:define name="pageHeader">Webshop products</ui:define>
 	<ui:define name="page_content">
-	
-	<link href="css/basket.css" rel="stylesheet" />
-	
-	<ui:repeat value="#{basketController.getUserBasket()}" var="product">
-		<div class="clearfix float-my-children">
-		   <img src="http://placehold.it/320x150" style='height: 150px; width: 200px;'/>
-		   <p>
-			<h:outputText value="#{product.productName}" style="font-weight:bold" />
-			</p>
+		<div class="col-md-9">
+			<link href="css/basket.css" rel="stylesheet" />
+
+			<ui:repeat value="#{basketController.getUserBasket()}" var="product">
+
+				<div class="clearfix float-my-children">
+					<img src="http://placehold.it/320x150"
+						style='height: 150px; width: 200px;' />
+					<p>
+						<h:outputLabel value="#{product.productName}"
+							style="font-weight:bold" />
+						<br />$
+						<h:outputLabel value="#{product.price}" style="font-weight:bold" />
+
+					</p>
+
+				</div>
+
+				<br />
+				<div class="text-left">
+
+					<h:form>
+						<h:commandButton style="margin:0px 10px 0px 10px;"
+							class="btn btn-primary" name="submit" value="Show Product"
+							action="#{clientController.registrateClient()}">
+							<f:setPropertyActionListener
+								target="#{productController.showProduct}" value="#{product}" />
+							<f:setPropertyActionListener
+								target="#{commentController.productId}"
+								value="#{productController.showProduct.id}" />
+						</h:commandButton>
+						<h:commandButton style="margin:0px 10px 0px 10px;"
+							class="btn btn-primary" name="submit" value="Delete Product"
+							action="#{clientController.registrateClient()}">
+							<f:setPropertyActionListener
+								target="#{productController.showProduct}" value="#{product}" />
+							<f:setPropertyActionListener
+								target="#{commentController.productId}"
+								value="#{productController.showProduct.id}" />
+						</h:commandButton>
+					</h:form>
+				</div>
+
+				<hr style="color: #3C74BD; background-color: #3C74BD; height: 2px;" />
+
+			</ui:repeat>
+			<div class="clearfix float-my-children">
+				<h:form>
+					<h:commandButton style="margin:0px 10px 0px 10px; "
+						class="btn btn-primary" name="submit" value="Buy >>"
+						action="#{orderController.createNewOrder()}">
+						<f:setPropertyActionListener target="#{orderController.products}"
+							value="#{basketController.getUserBasket()}" />
+						<f:setPropertyActionListener
+							target="#{orderController.clientName}"
+							value="${securityBean.userName}" />
+					</h:commandButton>
+				</h:form>
+			</div>
 		</div>
-	 </ui:repeat>
-	
 	</ui:define>
 </ui:composition>
 </html>
