--- a/WebContent/shop_item.xhtml
+++ b/WebContent/shop_item.xhtml
@@ -25,29 +25,15 @@
 					</h4>
 
 					<p>
-						See more snippets like these online store reviews at <a
-							target="_blank" href="http://bootsnipp.com">Bootsnipp -
-							http://bootsnipp.com</a>.
+						<h:outputText value="#{productController.showProduct.description}" />
 					</p>
-
-					<p>
-						Want to make these reviews work? Check out <strong><a
-							href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this
-								building a review system tutorial</a> </strong>over at maxoffsky.com!
-					</p>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-						sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-						reprehenderit in voluptate velit esse cillum dolore eu fugiat
-						nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-						sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
 
 				<div class="ratings">
 
-					<p class="pull-right">3 reviews</p>
+					<p class="pull-right">
+						<h:outputText value="#{commentController.commentCount}"></h:outputText>
+					</p>
 
 					<p>
 						<span class="glyphicon glyphicon-star" /> <span
@@ -67,7 +53,8 @@
 
 
 					<h:form action="">
-						<h:inputTextarea id="messageText" value="#{commentController.commentMessage}"
+						<h:inputTextarea binding="#{message}"
+							value="#{commentController.commentMessage}"
 							style="width:600px; height:50px; background-color: white;border: 2px solid #302B2B;" />
 						<p>
 							<h:commandButton class="btn btn-primary" name="submit"
@@ -76,6 +63,9 @@
 								<f:setPropertyActionListener
 									target="#{commentController.clientName}"
 									value="#{securityBean.userName}" />
+								<f:setPropertyActionListener
+									target="#{commentController.commentMessage}"
+									value="#{message.value}" />
 								<f:setPropertyActionListener
 									target="#{commentController.productId}"
 									value="#{productController.showProduct.id}" />
@@ -87,54 +77,29 @@
 				<hr />
 
 
+				<ui:repeat value="#{commentController.getCommentsByProduct()}"
+					var="comment">
+					<div class="row">
 
-				<div class="row">
+						<div class="col-md-12">
+							<span class="glyphicon glyphicon-star" /> <span
+								class="glyphicon glyphicon-star" /> <span
+								class="glyphicon glyphicon-star" /> <span
+								class="glyphicon glyphicon-star" /> <span
+								class="glyphicon glyphicon-star-empty" />
+							<h:outputLabel value="#{comment.client.name}"></h:outputLabel>
+							<span class="pull-right">10 days ago</span>
 
-					<div class="col-md-12">
-						<span class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star-empty" /> Anonymous <span
-							class="pull-right">10 days ago</span>
+							<p>
+								<h:outputText value="#{comment.text}"></h:outputText>
 
-						<p>This product was great in terms of quality. I would
-							definitely buy another!</p>
+							</p>
+						</div>
 					</div>
-				</div>
+					<hr />
+				</ui:repeat>
 
-				<hr />
 
-				<div class="row">
-
-					<div class="col-md-12">
-						<span class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star-empty" /> Anonymous <span
-							class="pull-right">12 days ago</span>
-
-						<p>I've alredy ordered another one!</p>
-					</div>
-				</div>
-
-				<hr />
-
-				<div class="row">
-
-					<div class="col-md-12">
-						<span class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star" /> <span
-							class="glyphicon glyphicon-star-empty" /> Anonymous <span
-							class="pull-right">15 days ago</span>
-
-						<p>I've seen some better than this, but not at this price. I
-							definitely recommend this item.</p>
-					</div>
-				</div>
 			</div>
 		</div>
 		<!-- /.container -->
