--- a/WebContent/admin_features/admin.xhtml
+++ b/WebContent/admin_features/admin.xhtml
@@ -15,6 +15,21 @@
 			<br />
 			<h:commandLink action="#{clientController.prepareList}"
 				value="List Clients" />
+			<br />
+			<h:commandLink action="#{productController.prepareList}"
+				value="List products" />
+			<br />
+			<h:commandLink action="#{productController.prepareNew}"
+				value="New Product" />
+			<br />
+			<h:commandLink action="#{categoryController.prepareList}"
+				value="List Categories" />
+			<br />
+			<h:commandLink action="#{categoryController.prepareNew}"
+				value="New Category" />
+					<br />
+			<h:commandLink action="#{orderController.prepareList}"
+				value="List orders" />
 		</h:form>
 	</ui:define>
 </ui:composition>
